--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
   display: flex;
   flex-direction: column;
-  gap: 8px;
-  padding: 16px;
+  gap: 48px;
+  padding: 48px;
   justify-content: center;
 }
 
@@ -123,4 +123,55 @@ dialog::backdrop {
 
 .cell-middle-vertical {
   align-content: center;
+}
+
+.card-table {
+  border-radius: .5em;
+  box-shadow: -2px 2px 7px rgba(0, 0, 0, 0.5);
+  width: fit-content;
+  min-width: 1024px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  place-self: center;
+}
+
+.MuiDataGrid-overlay {
+  text-align: center;
+}
+
+@media screen and (max-width: 320px) {
+
+  .card-table {
+    width: 305px;
+    min-width: 305px;
+
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 375px) {
+
+  .card-table {
+    width: 360px;
+    min-width: 360px;
+
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 425px) {
+
+  .card-table {
+    width: 410px;
+    min-width: 410px;
+
+  }
+}
+
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+
+  .card-table {
+    width: 748px;
+    min-width: 748px;
+
+  }
 }
