--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(30deg, white, dimgrey)
+  background: linear-gradient(30deg, white, dimgrey);
 }
 
 html,
 body {
-  height: 100%;
+  height: 100vh;
 }
 
 code {
